# car

./: Readme.md  app.py  central_dashboard.py  seed_vehicle_telemetry.py  telemetry.db
controller/: DESCRIPTION.rst  __init__.py  controller.py  setup.py
controller/controller.egg-info/: PKG-INFO  SOURCES.txt
intellicart/: DESCRIPTION.rst  __init__.py  autostart.service  intellicart.py  led.py  llm.py  music.py  preset_actions.py  pyproject.toml  stt.py  tts.py  utils.py  voice_assistant.py
sensorhat/: __init__.py  adc.py  basic.py  config.py  device.py  filedb.py  i2c.py  install.py  led.py  llm.py  modules.py  motor.py  music.py  pin.py  pwm.py  pyproject.toml  robot.py  speaker.py  stt.py  tts.py  utils.py  voice_assistant.py
static/: controller.js  style.css  telemetry.js
templates/: index.html  telemetry.html
videolib/: DESCRIPTION.rst  __init__.py  color_detection.py  face_detection.py  hands_detection.py  image_classification.py  install.py  mediapipe_object_detection.py  objects_detection.py  pose_detection.py  pyproject.toml  qrcode_recognition.py  traffic_sign_detection.py  utils.py  videolib.py
