[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "videolib"
authors = [
  {name="Group5", email="group5@mfg598.com" },
]
description = "Vision Library for Raspberry Pi"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]
keywords = ["videolib", "group5", "opencv", "image process", "visual process", "mfg598"]
dynamic = ["version"]

dependencies = [
]

[tool.setuptools]
packages = ["videolib"]

[project.scripts]

#[tool.setuptools.packages.find]
#include = ["videolib"]
#exclude = ["setup.py", "docs", 'tests*', 'examples', 'workspace']

[tool.setuptools.dynamic]
version = {attr = "videolib.version.__version__"}


